--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,15 +1,50 @@
-<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4" ng-controller="LoginController">
-    <form>
-        <h1>Login</h1>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+<div class="login-container col-xs-10 col-sm-8 col-md-6 col-lg-4" ng-controller="LoginController as loginCtrl">
+    <div class="alert alert-danger"
+         ng-bind="loginCtrl.errorMessage"
+         ng-show="loginCtrl.errorMessage"></div>
+    <div class="row">
+        <div class="col-xs-8 col-sm-6 col-md-4 col-lg-2">
+            <h3>Login</h3>
         </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="card login-card">
+        <div class="login-form">
+            <form name="loginForm"
+                  ng-submit="loginCtrl.login()"
+                  class="form-horizontal"
+                  role="form">
+                <div class="form-group">
+                    <label for="email">Username</label>
+                    <input type="text"
+                           ng-model="loginCtrl.user.username"
+                           class="form-control"
+                           id="email"
+                           placeholder="Enter Username"
+                           required="">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password"
+                           ng-model="loginCtrl.user.password"
+                           class="form-control"
+                           id="password"
+                           placeholder="Enter Password"
+                           required="">
+                </div>
+                <input type="submit"
+                       class="btn btn-success btn-sm"
+                       value="Login"
+                       ng-disabled="loginForm.$invalid">
+            </form>
         </div>
-
-        <button type="submit" class="btn btn-default">Login</button>
-    </form>
+    </div>
+    <div class="row>&nbsp;</div>
+    <div class="row>&nbsp;</div>
+    <div class="row>&nbsp;</div>
+    <div class="row>&nbsp;</div>
+    <div class="row">
+        <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
+            Not a member yet? <a href="/register" class="btn btn-default btn-sm">Register</a>
+        </div>
+    </div>
 </div>
